feat(#215): add ByteBufProxy.nioBufferCopy (safe copy) alternative
Adds a second static helper as an alternative to nioBufferView: instead of
aliasing LMDB memory, it copies the readable bytes out via the ByteBuf's own
(correct) accessor into a fresh direct NIO buffer. This uses no Unsafe/reflection,
needs no --add-opens, and — unlike the view — remains valid after the owning
transaction (or the Env) is closed.

The two helpers are deliberately offered together so the maintainers can choose:
keep the zero-copy view, the safe copy, or both. Dropping this commit removes the
copy variant; dropping the previous commit removes the view. Recommendation:
nioBufferCopy as the safe default, nioBufferView for zero-copy hot paths.

Refs lmdbjava#215.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GdiZ3ABYsVHXBRNCkEizpE